--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IntegrationTest1_DoorUI.cs" />
+    <Compile Include="IntegrationTest2_ButtonUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MicrowaveOvenClasses\MicrowaveOvenClasses.csproj">
