IntegrationTest2_ButtonUI Ready for test implementations

--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -44,6 +44,10 @@
     <Compile Include="IntegrationTest2_ButtonUI.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Microwave.Application\Microwave.Application.csproj">
+      <Project>{403619f7-9dfe-4c73-beef-c1c405cec63d}</Project>
+      <Name>Microwave.Application</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MicrowaveOvenClasses\MicrowaveOvenClasses.csproj">
       <Project>{2B04DA6B-AFE9-4548-AA05-84D806BA0FA4}</Project>
       <Name>MicrowaveOvenClasses</Name>
