--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="IntegrationTest1_DoorUI.cs" />
     <Compile Include="IntegrationTest2_ButtonUI.cs" />
+    <Compile Include="IntegrationTest3_Light.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MicrowaveOvenClasses\MicrowaveOvenClasses.csproj">
