--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -6,7 +6,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C856A52A-48CF-4BC1-B6F5-3FFEBC106989}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Microwave.Test.Integration</RootNamespace>
     <AssemblyName>Microwave.Test.Integration</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -35,6 +35,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
@@ -50,10 +53,6 @@
     <Compile Include="IntegrationTest8_CCTimer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Microwave.Application\Microwave.Application.csproj">
-      <Project>{403619f7-9dfe-4c73-beef-c1c405cec63d}</Project>
-      <Name>Microwave.Application</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MicrowaveOvenClasses\MicrowaveOvenClasses.csproj">
       <Project>{2B04DA6B-AFE9-4548-AA05-84D806BA0FA4}</Project>
       <Name>MicrowaveOvenClasses</Name>
